--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,10 @@
-debug=false
+debug=${DEBUB}
 server.error.include-stacktrace=never
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/doit
-
-spring.datasource.username=teste
-spring.datasource.password=1234
-spring.jpa.hibernate.ddl-auto=none
+spring.datasource.url=${DB_URL}
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
+spring.jpa.hibernate.ddl-auto=${DB_DDL_AUTO}
 
 spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
 
